<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionListActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:tag="rowOne"
            android:id="@+id/rowOne"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@color/LightBlue"
            android:onClick="goToMap">

            <ImageView
                android:contentDescription="@string/activityImg"
                android:id="@+id/activityOneImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/sports"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"/>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/activityOneTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultActivityTitle1"
                    android:layout_marginStart="25dp"
                    android:maxWidth="200dp"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/activityOneDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/defaultActivityDescrip1"
                    android:textSize="14sp"
                    android:maxWidth="200dp"
                    />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:tag="rowTwo"
            android:id="@+id/rowTwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@color/Green"
            android:onClick="goToMap">

            <ImageView
                android:contentDescription="@string/activityImg"
                android:id="@+id/activityTwoImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/sports"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"/>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/activityTwoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultActivityTitle2"
                    android:layout_marginStart="25dp"
                    android:maxWidth="200dp"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/activityTwoDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/defaultActivityDescrip2"
                    android:textSize="14sp"
                    android:maxWidth="200dp"
                    />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:tag="rowThree"
            android:id="@+id/rowThree"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:background="@color/Yellow"
            android:onClick="goToMap">

            <ImageView
                android:contentDescription="@string/activityImg"
                android:id="@+id/activityThreeImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/sports"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"/>
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:id="@+id/activityThreeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultActivityTitle3"
                    android:layout_marginStart="25dp"
                    android:maxWidth="200dp"
                    android:textSize="25sp"/>
                <TextView
                    android:id="@+id/activityThreeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:text="@string/defaultActivityDescrip3"
                    android:textSize="14sp"
                    android:maxWidth="200dp"
                    />
            </LinearLayout>
        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>