<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ScrollView
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/landingScrollView">

        <LinearLayout
            android:id="@+id/LinearScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:contentDescription="@string/imgDescription"
                        android:id="@+id/weatherIcon"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="45dp"
                        app:srcCompat="@drawable/forecast" />

                    <TextView
                        android:id="@+id/temperatureText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text= "@string/defaultTemp"
                        android:textSize="40sp"/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="?android:attr/buttonBarButtonStyle">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/recommendedActivityButton"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@color/DarkBlue"
                        android:onClick="recommendActivity"
                        android:paddingTop="10dp"
                        android:text="@string/recommendedActivity"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/weatherForecastButton"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@color/LightBlue"
                        android:onClick="weatherForecast"
                        android:padding="10dp"
                        android:text="@string/forecast"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="?android:attr/buttonBarButtonStyle">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/otherCityButton"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@color/Yellow"
                        android:onClick="changeCity"
                        android:padding="10dp"
                        android:text="@string/otherCity"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/groupChatButton"
                        android:layout_width="100dp"
                        android:layout_height="120dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="@color/Green"
                        android:padding="10dp"
                        android:text="@string/groupChat"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>